<resources>
    <string name="app_name">Contact Form</string>

    <!-- Field Names -->
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="emailAddress">Email:</string>
    <string name="gender">Gender:</string>


    <!-- Button Names -->
    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
</resources>
